force-app/core/main/default/objects/Contact/fields/Demo_Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Demo_Assigned_By__c</fullName>
    <label>Demo Assigned By</label>
    <description>User who last assigned a Demo Persona to this Contact via Demo Studio. Used to filter "My Demo Contacts" list views. Managed automatically by DemoStudioService.</description>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Demo Studio Contacts</relationshipLabel>
    <relationshipName>Demo_Studio_Contacts</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>