force-app/core/main/default/objects/Contact/fields/Demo_Original_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Demo_Original_Snapshot__c</fullName>
    <label>Demo Original Snapshot</label>
    <description>JSON snapshot of the Contact's original FirstName/LastName/Email/Phone before a Demo Persona was assigned. Used by unassign to restore the original values. Managed automatically by Demo Studio.</description>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>