force-app/core/main/default/objects/Contact/fields/Demo_Persona__c.field-meta.xml
<CustomField>
    <fullName>Demo_Persona__c</fullName>
    <label>Demo Persona</label>
    <referenceTo>Demo_Persona__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>