force-app/core/main/default/objects/Contact/recordTypes/Demo_Persona.recordType-meta.xml
<RecordType>
    <fullName>Demo_Persona</fullName>
    <active>true</active>
    <description>Demo Studio contacts. Lets the branded Unified Profile page render on the Contact in any Lightning app while real contacts keep their standard page.</description>
    <label>Demo Persona</label>
</RecordType>