force-app/core/main/default/objects/Contact/listViews/My_Demo_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Demo_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Demo_Persona__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_My_Demo_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Demo_Persona__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>My Demo Contacts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>